--- a/mybookstore/public/locales/es.json
+++ b/mybookstore/public/locales/es.json
@@ -85,7 +85,7 @@
   "form.instruction": "तुमचे नाव, ईमेल, WhatsApp/संपर्क क्रमांक, डिझाइनचे वर्णन आणि एक नमुना चित्र असेल तर ते अपलोड करा, आणि त्यानंतर तुमचा फॉर्म सबमिट करा.",
   "status.pendingReview": "तुम्ही दिलेली ऑर्डर तपासात आहोत (Pending Review)",
   "status.pendingReviewDesc": "तुमची डिझाइन सध्या प्रलंबित स्थितीत आहे. आमचा संघ लवकरच तुमची डिझाइन तपासेल.",
-  "status.underReview": "डिझाइनचे परीक्षण सुरू आहे (In Review)",
+  "status.underReview": "डिझाइनचे परीक्षण सुरू आहे (In Review) & (In Discussion)",
   "status.underReviewDesc": "आमचा संघ आपले डिझाइन/ऑर्डर  तपासत आहे. या टप्प्यात, आपली स्थिती `In Review` अशी असेल. अंतिम निर्णयासाठी आम्ही WhatsApp किंवा फोनद्वारे संपर्क करू.",
   "status.inProgress": "काम सुरू आहे(In Progress)",
   "status.inProgressDesc": "सर्व तपशील निश्चित झाल्यानंतर, आम्ही तुमचे सानुकूल ऑर्डर काळजीपूर्वक तयार करायला सुरुवात करू.",
