--- a/mybookstore/public/locales/en.json
+++ b/mybookstore/public/locales/en.json
@@ -113,8 +113,10 @@
   "services.onDemandCustomization.description": "Modify existing products or create entirely new ones with our expert team.",
   "services.description": "From small personalized gifts to large-scale bulk orders, we bring your creativity to life.",
   "testimonials.title": "Customer Testimonials",
-  "testimonials.description": "See what our happy customers have to say about their experience!"
-  
+  "testimonials.description": "See what our happy customers have to say about their experience!",
+  "greeting_message": "We're grateful for the trust of countless customers who have chosen us for their custom creations.",
+  "greeting_message_placeholder": " While we can't showcase every story here, each one inspires us to keep delivering exceptional experiences. Thank you for being a part of our journey!"
+
 
   
 
