added marathi font

--- a/mybookstore/public/locales/es.json
+++ b/mybookstore/public/locales/es.json
@@ -111,8 +111,8 @@
   "services.onDemandCustomization.title": "ऑन-डिमांड design/customization",
   "services.onDemandCustomization.description": "आमच्या क्रीटीव्ह टीमसोबत बसून नवीन design किंवा प्रोटोटाईप   तयार करा आणि तुमच्या आवडीची गोस्ट तयार करून घ्या.",
   "services.description": "छोट्या वैयक्तिकृत वस्तू/भेटवस्तूंपासून ते मोठ्या प्रमाणातील ऑर्डरपर्यंत, आम्ही सर्व काही सेवा पुरवतो.",
-  "testimonials.title": "ग्राहक प्रशंसापत्रे",
-  "testimonials.description": "आमचे आनंदी ग्राहक त्यांच्या अनुभवाबद्दल काय म्हणतात ते पहा!",
+  "testimonials.title": "आमच्या जुन्या ग्राहकांसाठी थोडंसं...",
+  "testimonials.description": "",
   "greeting_message": "आमच्यावर विश्वास ठेवून तुमच्या खास कस्टम क्रिएशन्ससाठी आम्हाला निवडणाऱ्या असंख्य ग्राहकांचे आम्ही मनःपूर्वक आभार मानतो.",
   "greeting_message_placeholder": "प्रत्येकाची कहाणी इथे मांडता येणार नाही, पण त्या प्रत्येक गोष्टी आम्हाला उत्तम सेवा देण्यासाठी सतत प्रेरणा देतात. आमच्या या प्रवासाचा भाग झाल्याबद्दल तुमचे मनापासून आभार!"
 
